fix(iiif-viewer): show search in 2 rows on narrow and mobile screens

--- a/src/modules/ie-objects/ObjectDetailPage.module.scss
+++ b/src/modules/ie-objects/ObjectDetailPage.module.scss
@@ -175,8 +175,8 @@ $zendesk-feedback-button-margin-bottom-mobile: 3.5rem;
 			display: none;
 
 			@include respond-to(md) {
-				grid-row: 2;
-				grid-column: 2;
+				grid-row: 2 !important;
+				grid-column: 1 / 3 !important;
 			}
 		}
 	}
